child-wallet: Internet Identity認証UI・ルーティング実装とスタイル整備
- ブランチルール追加: `.cursor/rules/branch/3-icp-wallet.mdc`
- devcontainer 設定に推奨拡張を追加
- compose.yaml / example/package.json の開発ポート・マッピングを調整
- 認証フロー実装・改善
  - `useIcpAuth` の初期化を非同期化、isLoading の扱い修正、セッションリフレッシュ処理を強化
  - 定期リフレッシュでセッション切れ検知
- ルート保護導入
  - `AppShell` を追加して認証状態に応じたリダイレクトを実装
  - `/` をログイン画面、`/home` を認証後ホームに割当
- UI コンポーネント更新
  - `Header` を認証対応に拡張（ログアウト・プリンシパル表示）
  - `Home` を認証向けのダッシュボード風に更新
  - 新規 `Login` ページ追加
  - グローバルスタイルを強化（`style.css`）

--- a/compose.yaml
+++ b/compose.yaml
@@ -5,7 +5,7 @@ services:
       dockerfile: ./docker/anvil/develop.Dockerfile
     tty: true
     ports:
-      - 18545:8545
+      - 8545:8545
 
   app:
     build:
@@ -15,5 +15,6 @@ services:
     volumes:
       - .:/application
     ports:
-      - 13000:3000 # frontend
-      - 14943:4943 # icp
+      - 3000:3000 # wallet
+      - 3001:3001 # example
+      - 4943:4943 # icp
