EVMアドレス取得周りの機能追加とログ出力の導入
- ブランチルールを追加: `.cursor/rules/branch/5-create-eth-address.mdc`
- バックエンド: `createPublicKey` / `getPublicKey` に Debug ログ追加、返信構造体を明示化
- フロントエンド:
  - `src/.../utils/evmAddress.ts`（公開鍵→EVMアドレス変換）追加
  - `src/.../utils/backendActor.ts`（バックエンド actor 作成）追加
  - `src/.../hooks/useEvmAddress.ts` フック追加（localStorage 永続化・取得フォールバック含む）
  - `src/.../hooks/icpWalletClient.ts` を EVM アドレス取得ロジックへ対応するよう修正
  - `src/.../pages/Home/index.tsx` に EVM アドレス表示と再取得ボタンを追加
- 依存関係: `@noble/curves` を追加（package.json / pnpm-lock.yaml 更新）
- その他: Makefile に `anvil` / `backend` ターゲット追加、`example` ワークスペース追加、`test_secp.ts` 追加

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "type": "module",
   "workspaces": [
-    "src/child_wallet_frontend"
+    "src/child_wallet_frontend",
+    "example"
   ]
 }
