--- a/src/child_wallet_frontend/package.json
+++ b/src/child_wallet_frontend/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"@icp-sdk/auth": "^5.0.0",
 		"@icp-sdk/core": "^5.0.0",
+		"@noble/curves": "^2.0.1",
 		"preact": "^10.26.9",
 		"preact-iso": "^2.11.1",
 		"preact-render-to-string": "^6.6.5",
