--- a/src/child_wallet_frontend/package.json
+++ b/src/child_wallet_frontend/package.json
@@ -10,6 +10,7 @@
 		"@icp-sdk/auth": "^5.0.0",
 		"@icp-sdk/core": "^5.0.0",
 		"@noble/curves": "^2.0.1",
+		"html5-qrcode": "^2.3.8",
 		"preact": "^10.26.9",
 		"preact-iso": "^2.11.1",
 		"preact-render-to-string": "^6.6.5",
