ファイルを読みます。
[1 tool called]

feat(child-wallet-frontend): ERC-20 送金フローを実装

- フロントでの ERC-20 送金機能を追加（hooks/erc20、useEvmAddress 等）
- Internet Identity / ICP 認証フロー強化（hooks/icpAuth、icpWalletClient の更新）
- バックエンド呼び出しラッパーと型バインディングを追加（bindings、utils/backendActor）
- UI 更新：Home / Payment ページに送金関連コンポーネントと画面遷移を実装
- wagmi 設定・vite.config・package.json・pnpm-lock を更新し開発環境を整備
- makefile の調整（ビルド / ローカルデプロイ手順改善）
- 備考：ICP の ECDSA 公開鍵→EVM アドレス変換および nonce の永続化に関する設計を反映。再ログイン時の鍵取得・エラー処理に注意してください。

--- a/src/child_wallet_frontend/package.json
+++ b/src/child_wallet_frontend/package.json
@@ -8,8 +8,10 @@
 	},
 	"dependencies": {
 		"@icp-sdk/auth": "^5.0.0",
+		"@icp-sdk/bindgen": "^0.2.1",
 		"@icp-sdk/core": "^5.0.0",
 		"@noble/curves": "^2.0.1",
+		"candid": "link:@icp-sdk/core/candid",
 		"html5-qrcode": "^2.3.8",
 		"preact": "^10.26.9",
 		"preact-iso": "^2.11.1",
