--- a/src/child_wallet_frontend/package.json
+++ b/src/child_wallet_frontend/package.json
@@ -7,6 +7,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@dfinity/agent": "^3.4.3",
 		"@icp-sdk/auth": "^5.0.0",
 		"@icp-sdk/bindgen": "^0.2.1",
 		"@icp-sdk/core": "^5.0.0",
@@ -23,13 +24,16 @@
 		"@preact/preset-vite": "^2.10.2",
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.18",
+		"@types/node": "^25.0.10",
 		"autoprefixer": "^10.4.23",
 		"daisyui": "^5.5.14",
+		"dotenv": "^17.2.3",
 		"eslint": "^9.39.2",
 		"eslint-config-preact": "^2.0.0",
 		"tailwindcss": "^4.1.18",
 		"typescript": "^5.9.3",
-		"vite": "^7.3.1"
+		"vite": "^7.3.1",
+		"vite-plugin-environment": "^1.1.3"
 	},
 	"eslintConfig": {
 		"extends": "preact"
